--- a/set_1/Makefile
+++ b/set_1/Makefile
@@ -1,2 +1,2 @@
-set2: xor.c hex_to_bytes.c
-	gcc xor.c functions.c -o xor
+challenge3: single_byte_xor_cipher.c hex_to_bytes.c
+	gcc single_byte_xor_cipher.c functions.c -o single_byte_xor_cipher
