--- a/set_1/Makefile
+++ b/set_1/Makefile
@@ -1,2 +1,2 @@
-challenge3: single_byte_xor_cipher.c hex_to_bytes.c
-	gcc single_byte_xor_cipher.c functions.c -o single_byte_xor_cipher
+challenge4: detect_xor.c hex_to_bytes.c
+	gcc detect_xor.c functions.c -o detect_xor
